Added box plots

--- a/academics/index.html
+++ b/academics/index.html
@@ -8,7 +8,8 @@
   TODO
 </p>
 <div class="half second">
-  Second half. TODO: Line chart. Bar chart for difficulty
+  <div id="grades"></div>
+  <span class="graph-title">Grades from 1A to 4A </span>
 </div>
 
 <div class="vbx2"></div>
