--- a/coop/index.html
+++ b/coop/index.html
@@ -113,6 +113,7 @@ imply higher job satisfaction.
   disadvantage in terms of co-op job hunting.
 </p>
 <div class="half second">
+  <div id="age-salary"></div>
   <span class="graph-title"> Age started programming </span>
 </div>
 
@@ -134,6 +135,7 @@ imply higher job satisfaction.
   employers.
 </p>
 <div class="half second">
+  <div id="hackathon-salary"></div>
   <span class="graph-title"> Number of hackathons attended</span>
 </div>
 
@@ -160,6 +162,9 @@ imply higher job satisfaction.
   amongst each other.
 </p>
 <div class="half second">
+  <div id="side-salary"></div>
+  <span class="graph-title"> Side project commitment estimate</span>
+  <div id="side-salary-2"></div>
   <span class="graph-title"> Side project commitment estimate</span>
 </div>
 
