Edits, added box plots, more content

--- a/academics/index.html
+++ b/academics/index.html
@@ -94,7 +94,8 @@ TODO:
   academically inclined students are.
 </p>
 <div class="half second">
-  Second half. Box plot
+  <div id="parent-grades"></div>
+  <span class="graph-title">Parents' education</span>
 </div>
 
 <div class="vbx4"></div>
