--- a/background/index.html
+++ b/background/index.html
@@ -2,12 +2,13 @@
 <h3> Gender </h3>
 <p class="half">
   <span class="big">
-    Women make up 17% of the students, which is approximately the same proportion as
+    Women make up 17% of students, which is approximately the same proportion as
     the number of women in tech.
   </span>
   Although the gender ratio isn’t something to be
   satisfied with, the trend is positive: the proportion of female students in
   more-recent SE classes has been increasing.
+  <br /> <br />
 </p>
 <div class="half second">
   <div id="gender"></div>
@@ -55,7 +56,11 @@
   14% of SE students are international, which is 4% less than University of
   Waterloo's 18%.
   </span>
-  TODO
+  This could be due to the higher tuition costs for international students, who
+  pay 27% more than the average internationa tuition fee.
+  <br /> <br />
+  International students came from countries like Nigeria, United Arab Emirates,
+  China, Pakistan, South Korea, Indonesia.
 </p>
 <div class="half second">
   <div id="international"></div>
@@ -68,11 +73,14 @@
 <h3> Income </h3>
 <p class="half">
   <span class="big">
-    TODO
+    More than half of students come from families whose income is higher than
+    the median Canadian family income.
   </span>
-  TODO
+  The majority of students come from
 </p>
 <div class="half second">
+  <div id="family-income"></div>
+  <span class="graph-title"></span>
 </div>
 
 <div class="vbx2"></div>
@@ -82,12 +90,13 @@
   <span class="big">
   There are more parents with Masters and Doctorate's combined than Bachelors.
   </span>
-  Compared to our parents, only 3 students out of 113 chose to do grad school. This could
+  Compared to our parents, only 3 students out of 113 are planning on attending
+  grad school. This could
   either be a generational shift, or it could just be that students are tired of
   school after 5 years with no summer.
 </p>
 <div class="half second">
   <div id="parent-education"></div>
-  <span class="graph-title">Students' parents' highest education</span>
+  <span class="graph-title">Parents' highest education</span>
 </div>
 
