--- a/coop/index.html
+++ b/coop/index.html
@@ -4,17 +4,17 @@
   <span class="big">
     At least 300 companies from 58 different cities have hired an SE student.
   </span>
-  Students had the opportunity to work in many different types of environments.
-  For example, working at a 5 person startup, developing in Kenya, doing
+  Students had the opportunity to work in many different types of environments,
+  ranging from working at a 5 person startup, developing in Kenya, doing
   research with professors, working at a big tech company, etc. Some students also tried
   new positions outside of software engineering such
   as product designer, data scientist, associate quantitative trader,
-  consulting, etc.
+  consultant, and more.
   <br /> <br />
   The benefit of having 6 internships is that students get to explore different
   company sizes doing different positions in different cities. This is
-  invaluable for students because it helps us figure out what we want to do once
-  we graduate.
+  invaluable for students because it helps students figure out what they want
+  upon graduation.
 </p>
 <div class="vb"></div>
 <p class="full">
@@ -38,9 +38,8 @@ TODO: Create asset
   Out of the 9% of students that only interned in Canada, some are restricted
   due to work visas.
   <br /><br />
-  After the 5th co-op, there is a decrease in the number of students working in
-  the US. Most people that worked in the US worked in California, specifically
-  in Silicon Valley. This makes sense because Silicon Valley is the HQ for many
+  Most people that worked in the US worked in California, specifically
+  in Silicon Valley. One of the reasons for this is because Silicon Valley is the HQ for many
   large tech companies that hire software engineers such as Google, Facebook,
   Apple, etc.
   <br /><br />
@@ -62,7 +61,7 @@ TODO: Create asset
     31% of students that worked in California preferred working elsewhere.
   </span>
   Although it is still preferred by the majority of students, this suggests that
-  it's not for everyone. This suggests that the infamous 'Cali or Bust'
+  it is not for everyone. This suggests that the infamous 'Cali or Bust'
   mentality can set up a significant number of current students for
   disappointment compared to other opportunities.
 </p>
@@ -82,7 +81,7 @@ TODO: Create asset
   This is largely explained by the salary differences between different locations,
   extra stipends included in offers. These factors compensate for higher living
   costs, especially in San Francisco where housing easily costs between
-  $2,000 to $3,000 USD per month.
+  $2,000 to $3,000 per month.
 </p>
 <div class="half second">
   <div id="salary">
@@ -101,7 +100,7 @@ results should be taken with a grain of salt because higher salary does not
 imply higher job satisfaction.
 </p>
 
-<div class="vbx2"></div>
+<div class="vbx4"></div>
 <h3> Years of coding experience </h3>
 <p class="half">
   <span class="big">
@@ -109,8 +108,8 @@ imply higher job satisfaction.
     started coding later.
   </span>
   It doesn't matter if a student started at the age of 13 or 18. This suggests
-  that students that start coding near the start of university are not at a
-  disadvantage in terms of co-op job hunting.
+  that students that started coding later are not at a disadvantage in terms
+  of co-op job opportunities.
 </p>
 <div class="half second">
   <div id="age-salary"></div>
@@ -129,7 +128,7 @@ imply higher job satisfaction.
   because students that attended a hackathon cared more about getting a better
   job.
   <br /> <br />
-  Students that attend more than 5 hackathons earned approximately 27% more than
+  Students that attended more than 5 hackathons earned approximately 27% more than
   those that only attended between 1 to 5 hackathons. This could suggest that the
   former has a lot more relevant work to show which is more appealing to
   employers.
@@ -180,5 +179,6 @@ imply higher job satisfaction.
   with each other.
 </p>
 <div class="half second">
+  <div id="admission-salary"></div>
   <span class="graph-title"> Side project commitment estimate</span>
 </div>
