--- a/end/index.html
+++ b/end/index.html
@@ -68,8 +68,8 @@ Processing scripts
 
 <p class="full">
 Class Profile code
-<a target="_blank" href="https://github.com/andyzg/class-profile">
-  https://github.com/andyzg/class-profile</a>
+<a target="_blank" href="https://github.com/andyzg/classprofile">
+  https://github.com/andyzg/classprofile</a>
 </p>
 
 <p class="full">
