--- a/future/index.html
+++ b/future/index.html
@@ -1,6 +1,5 @@
 <h1> Future </h1>
-<h2> What's next? </h2>
-<h3> Post-grad plans </h3>
+<h3> Post-graduation plans </h3>
 <p class="half two-third">
   <span class="big">
     As of 5 months before graduation, 77% of students already have an offer, and 15% of students are
@@ -19,7 +18,11 @@
   West US.
 </p>
 <div class="half second third">
-  Second half. Bar charts
+  <div id="post-grad"></div>
+  <span class="graph-title">Post graduation plans</span>
+  <div class="vb"></div>
+  <div id="post-location"></div>
+  <span class="graph-title">Desired location</span>
 </div>
 
 <div class="vbx2"></div>
@@ -28,10 +31,14 @@
 TODO
 
 <h2> Debt </h2>
-<p class="half two-third">
-TODO
+<p class="half">
+  <span class="big">
+    65% of the class is graduating debt-free.
+  </span>
+  Only 5% of students are graduating with more than $30,000 of debt.
+  TODO: Get family income?
 </p>
-<div class="half second third">
+<div class="half second">
   Second half. Bar chart.
 </div>
 
