--- a/introduction/index.html
+++ b/introduction/index.html
@@ -5,11 +5,11 @@
   Engineering. For 5 years, the 141 students of the class of 2018 spent 8
   semesters in school with similar schedules as well as 6 internships.
   <br /><br />
-  SE is commonly compared to Computer Science, and is often seen as its
-  rigorous and engineering-oriented counterpart. Prospective students may wonder whether SE
+  SE is commonly compared to Computer Science, and is often seen as its more-constrained,
+  engineering-oriented counterpart. Prospective students may wonder whether SE
   is the right fit for them, and whether they’ll enjoy the environment. This
   profile attempts to showcase who SE 2018 students are, what they've done, and
-  how they went through university.
+  how university went.
 </p>
 
 <div class="vbx4"></div>
@@ -18,15 +18,19 @@
 
 <p class="full">
 The findings in this report were derived from the results of a class survey.
-In total, 113 out of 141 (80%) graduating students responded. In many ways (especially
-class size), the class of 2018 is an outlier, and generalizations from this
-class to other SE classes is not recommended.
+In total, 113 out of 141 (80%) graduating students responded. SE Classes
+can vary significantly depending on the year, so generalizations from this
+class to other SE or CS classes are not recommended.
   <br /><br />
 
-Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). Coop terms are evenly
-spread out between study terms, starting after 1B and ending before 4B.
-  <br /><br />
+Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). 4 month coop terms
+occur after every study term starting after 1B and ending before 4B.
+<br /><br />
 
+All analysis involving income is expressed in Canadian dollars (CAD). The exchange
+rate used to convert from USD to CAD depends on time and is stated where relevant.
+
+<br /><br />
 This class profile was largely inspired from the SYDE 2017 class profile created
 by Joey Loi and Atef Chaudhury.
 </p>
