--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -130,10 +130,14 @@
   <span class="big">
   The majority of students are using a macOS machine.
   </span>
-  Interestingly, most students
-  didn’t have a macOS machine in first year. This result isn’t surprising since
+  This result isn’t surprising since
   macOS is built on top of Unix, enabling a lot of important functionality for
   programmers
+  <br /> <br />
+  Interestingly, most students didn’t have a macOS machine in first year. Many
+  employers provide Macbooks as work laptops which introduced students to macOS's
+  development environment. As a result, many students converted to being Macbook
+  users during university.
 </p>
 <div class="half second">
   <div id="desktop"></div>
