--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -1,16 +1,6 @@
 <h1> Program Outcome </h1>
 
-<h2> Original class </h2>
-
-<p class="half">
-  Use Patrick Lam's data, + 81%
-</p>
-<div class="half second">
-  <div id="original"></div>
-  <span class="graph-title"></span>
-</div>
-
-<h2> Choose again </h2>
+<h3> Looking back </h3>
 <p class="half">
   <span class="big">
     70% of students would choose SE as a program if they could go back to high
@@ -27,27 +17,34 @@
 
 <div class="vb"></div>
 
-<h4> How was the experience per gender? </h4>
-<p class="half two-third">
-  TODO
+<h3> How was the experience per gender? </h3>
+<p class="half">
+  <span class="big">
+    Being a part of Software Engineering was life-changing for most of
+    the class, and equally enjoyed by both men and women.
+  </span>
+  51% of the class rated SE a max rating score, and 87% of the class rated above
+  a 4 out of 5. Shoutouts to the Faculty of Software Engineering and the class
+  for creating such a great environment!
 </p>
-<div class="half second third">
-  Second half. Box plot
-</div></h2>
+<div class="half second">
+  <div id="gender-rating"></div>
+  <span class="graph-title">Rating per gender</span>
+</div>
 
 <div class="vbx2"></div>
 
-<h2> Financial breakdown </h2>
+<h3> Financial breakdown </h3>
 <p class="half third">
   TODO
 </p>
 <div class="half second two-third">
   Second half. Complex line chart
-</div></h2>
+</div>
 
 <div class="vbx2"></div>
 
-<h2> Paths </h2>
+<h3> Paths </h3>
 <p class="full">
   TODO
 </p>
