--- a/academics/index.html
+++ b/academics/index.html
@@ -59,7 +59,7 @@ TODO
     3B also had SE 380, the most disliked course, which explains why it was the hardest
     term.
   </span>
-  Although SE 463 is just as disliked, it is an easy course, which explains why 4A
+  Although SE 463 is just as disfavoured, it was a much easier course, which explains why 4A
   was an easy term. TODO.
 </p>
 <div class="half">
@@ -75,10 +75,9 @@ TODO
 <span class="big">
   There was no correlation between self-reported attendance and grades.
 </span>
-To be clear, this does not conclude nor suggest that going to class isn't
-useful. Instead, it suggests that it is possible to achieve good grades without
+To be clear, this does not conclude nor suggest that not going to class is
+beneficial. Instead, it suggests that it is possible to achieve good grades without
 attending all classes.
-TODO:
 </p>
 <div class="half second">
   Second half. Multi Line chart.
