--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -4,7 +4,7 @@
 <h3> Exercise </h3>
 <p class="half">
   <span class="big">
-    Almost 80% of students exercise a few times a month.
+    Almost 80% of students exercise at least a few times a month.
   </span>
   This could be in the form of intramurals, gym, sports team, etc.
   Students typically start SE intramural teams with one another.
@@ -42,8 +42,8 @@
 <h3> Sleeping </h3>
 <p class="half">
   <span class="big">
-  Software engineers may have a reputation for being nocturnal, most of
-  us aren’t night owls.
+  Software engineers may have a reputation for being nocturnal, but most of
+  SE students aren’t night owls.
   </span>
   In fact, 72% of students usually sleep before 1AM.
   However, some students do still prefer sleeping late, possibly because they
@@ -80,7 +80,7 @@
 <h3> Programming language</h3>
 <p class="half">
   <span class="big">
-  Python is the most popular programming language, followed by Java, and then JavaScript.
+  Python is the most popular programming language.
   </span>
   Python’s versatility for back-end web, scripting, and especially machine learning could explain
   why it’s so popular in our class. Many of these disciplines are high in demand
@@ -135,7 +135,7 @@
   programmers
   <br /> <br />
   Interestingly, most students didn’t have a macOS machine in first year. Many
-  employers provide Macbooks as work laptops which introduced students to macOS's
+  employers provided Macbooks as work laptops which introduced students to macOS's
   development environment. As a result, many students converted to being Macbook
   users during university.
 </p>
@@ -154,7 +154,6 @@
   </span>
   Hackathons are an overnight
   programming event where attendees build something from scratch.
-  `TODO: mention that it's not a requirement to land a good job`
 </p>
 <div class="half second">
   <div id="hackathons">
