--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -3,7 +3,7 @@
 <h3> Looking back </h3>
 <p class="half">
   <span class="big">
-    70% of students would choose SE as a program if they could go back to high
+    70% of students would choose SE again if they could go back to high
     school.
   </span>
   Computer Science is a popular alternative because it is less rigorous and has
@@ -25,7 +25,7 @@
   </span>
   51% of the class rated SE a max rating score, and 87% of the class rated above
   a 4 out of 5. Shoutouts to the Faculty of Software Engineering and the class
-  for creating such a great environment!
+  for creating such a great environment for students!
 </p>
 <div class="half second">
   <div id="gender-rating"></div>
