Remove HTTP requests for coop data, added paths, added more word clouds

--- a/background/index.html
+++ b/background/index.html
@@ -43,9 +43,13 @@
   activities such as volunteer work for non-profits, being a cadet, starting a
   school newspaper, and more. Pursuing their own unique personal interests was a
   common pattern amongst students during high school.
+  <br /> <br />
+  Note that this is not a comprehensive list, and that students may have
+  participated in other extracurricular activities as well.
 </p>
 <div class="half second">
-  High school extracurricular bar chart. Word cloud
+  <div id="hs-extras"></div>
+  <span class="graph-title">Extracurriculars students were involved with in high school</span>
 </div>
 
 <div class="vbx2"></div>
