--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -70,7 +70,8 @@
   activity.
 </p>
 <div class="half second">
-  Second half. Word cloud.
+  <div id="uni-extras"></div>
+  <span class="graph-title">Non-comprehensive list of university extrcurriculars</span>
 </div>
 
 <div class="vbx4"></div>
@@ -210,8 +211,4 @@
   <div id="disciplines"></div>
   <span class="graph-title"> Disciplines of interest </span>
 </div>
-
-
-
-
 
