--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -45,6 +45,24 @@
 <div class="vbx2"></div>
 
 <h3> Paths </h3>
-<p class="full">
-  TODO
-</p>
+<div class="half path-section">
+  <div class="path-item">
+    <span class="big path-title">Transitioning into design</span>
+    <p>
+I’ve always seen myself as an outsider among my peers in more ways than one. Outside of class, I invested my time in pursuits like illustration, photography, and fashion blogging. When I learned about product design, a field that bridged computing and design, I knew this was it.
+      <br /><br />
+I’m grateful I took the leap that landed me my first product role because once I was surrounded by a community of designers with passions similar to my own, I knew I finally belonged.
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img src="./img/john.jpg" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">John Salaveria</div>
+        <div class="path-description">Product Designer at Yelp</div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="half second">
+</div>
