--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -59,10 +59,30 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
       <div class="path-text">
         <div class="path-name">John Salaveria</div>
-        <div class="path-description">Product Designer at Yelp</div>
+        <div class="path-description">Incoming Product Designer at Yelp</div>
       </div>
     </div>
   </div>
 </div>
 <div class="half second">
+  <div class="path-item">
+    <span class="big path-title">Stumbling into product management</span>
+    <p>
+      During my 2nd co-op, I ended up having to do customer support part-time for a month which helped me build user empathy. I was also involved with the Product Vision Club, a product management community.
+      <br /><br />
+      I was hooked and ended up leading the club as well as organizing CUTC.
+      Taking the risk to put myself in uncomfortable situations helped me
+      transition into product roles early on, and I’ve loved the world of
+      product management ever since.
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img src="./img/kai.jpg" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">Kaivalya Gandhi</div>
+        <div class="path-description">Incoming APM at Yahoo!</div>
+      </div>
+    </div>
+  </div>
 </div>
