Fix width for future

--- a/future/index.html
+++ b/future/index.html
@@ -1,6 +1,6 @@
 <h1> Future </h1>
 <h3> Post-graduation plans </h3>
-<p class="half two-third">
+<p class="half">
   <span class="big">
     As of 5 months before graduation, 77% of students already have an offer, and 15% of students are
     still looking for a job.
@@ -17,7 +17,7 @@
   software engineering such as East Coast Canada, East Coast US and Pacific North
   West US.
 </p>
-<div class="half second third">
+<div class="half second">
   <div id="post-grad"></div>
   <span class="graph-title">Post graduation plans</span>
   <div class="vb"></div>
