--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -66,6 +66,24 @@ I’m grateful I took the leap that landed me my first product role because once
 </div>
 <div class="half second">
   <div class="path-item">
+    <span class="big path-title">Doing a minor</span>
+    <p>
+      I've always been interested in the mind, so when I saw the option for a minor in cognitive science, I thought, why not?
+      <br /><br />
+      I'm somewhat torn by the end of it. I missed out on some courses, but I took others that I really enjoyed (like a seminar course that I did a research experiment in!). I could've taken these without being enrolled in the minor though, so my advice is to just take courses you're interested in and not stress about the minor.
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img src="./img/soheil.jpeg" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">Soheil Koushan</div>
+        <div class="path-description">Incoming SWE at Embark Trucks</div>
+      </div>
+    </div>
+  </div>
+  <div class="vbx2"></div>
+  <div class="path-item">
     <span class="big path-title">Stumbling into product management</span>
     <p>
       During my 2nd co-op, I ended up having to do customer support part-time for a month which helped me build user empathy. I was also involved with the Product Vision Club, a product management community.
