Add more paths, small fixes

--- a/academics/index.html
+++ b/academics/index.html
@@ -34,33 +34,40 @@ compensate for their lower grades in 3B.
 
 
 <h2> Courses </h2>
-<h3> Favourite courses </h3>
-<p class="full">
+<h3> Favourite required courses </h3>
+<p class="half">
 <span class="big">
-  Although 3B was the most difficult term, it had the most popular course.
+  Although 3B was the most difficult term, it had Concurrency (CS343), the most popular course.
 </span>
-TODO
+  The top 8 favourited courses were all between 2A and 3B. Although
+  these terms are slightly more difficult, they also happen to have the most
+  interesting content for students.
+  <br /><br />
+  Students are also required to take several technical electives to fulfill
+  their credits.  The most popular electives included Graphics (CS488),
+  Distributed Computing (ECE 454), and Human-Computer Interaction (CS 449).
 </p>
-<div class="vbx2"></div>
-
-<div class="half">
+<div class="half second">
   <div id="favourite-course"></div>
   <span class="graph-title">Favourite mandatory courses</span>
 </div>
-<div class="half second">
-  <div id="favourite-elective"></div>
-  <span class="graph-title">Favourite technical electives</span>
-</div>
-<div class="vbx2"></div>
 
-<h3> Least favourite courses </h3>
+<h3> Least favourite required courses </h3>
 <p class="half">
   <span class="big">
-    3B also had SE 380, the most disliked course, which explains why it was the hardest
-    term.
+    3B also had Feedback Controls (SE 380), the most disliked course, which
+    explains why it was the hardest term.
   </span>
   Although SE 463 is just as disfavoured, it was a much easier course, which explains why 4A
-  was an easy term. TODO.
+  was an easier term.
+  <br /><br />
+  It's important to note that courses that were disliked do not imply that
+  students find the content useless. Instead, there are a variety of factors
+  such as personal interests, final grade, assignments. For example, Logic and
+  Computation (SE 212) is considered as useful to 88% of students
+  <a href="https://uwflow.com/course/se212" target="_blank">
+    according to UWFlow.</a>
+
 </p>
 <div class="half">
   <div id="disliked-course"></div>
