--- a/coop/index.html
+++ b/coop/index.html
@@ -151,11 +151,11 @@ imply higher job satisfaction.
   of work experience.
 
   <br /> <br />
-  It's important to mention that <b>side projects and hackathons are not the only way to find
+  It is important to mention that <b>side projects and hackathons are not the only way to find
   a job</b>. There have been many less conventional ways students have used to
   find job opportunities such as referrals, networking, etc.
   <br /> <br />
-  It's just as important to note that <b>students who are not involved in software-related
+  It is just as important to note that <b>students who are not involved in software-related
   extracurriculars still find great jobs</b>. In fact, pursuing interests outside
   of software is encouraged, and is something many SE students encourage
   amongst each other.
