--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -84,11 +84,11 @@
   Python is the most popular programming language.
   </span>
   Python’s versatility for back-end web, scripting, and especially machine learning could explain
-  why it’s so popular in our class. Many of these disciplines are high in demand
+  why it is so popular in our class. Many of these disciplines are high in demand
   in the software engineering, making Python an ideal general purpose language.
 
   <br /> <br />
-  Java continues to be very popular since it’s
+  Java continues to be very popular since it is
   commonly taught as students' first programming language in high school.
 
   <br /> <br />
