--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -66,7 +66,7 @@ I’m grateful I took the leap that landed me my first product role because once
 </div>
 <div class="half second">
   <div class="path-item">
-    <span class="big path-title">Doing a minor</span>
+    <span class="big path-title">Minoring in Cognitive Science</span>
     <p>
       I've always been interested in the mind, so when I saw the option for a minor in cognitive science, I thought, why not?
       <br /><br />
