Mobile friendly af, add favicon, fix graphs for mobile

--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -153,8 +153,14 @@
   <span class="big">
   More than 80% of students have gone to at least one hackathon.
   </span>
-  Hackathons are an overnight
-  programming event where attendees build something from scratch.
+  They are especially popular at UWaterloo, home to Hack the North,
+  Canada's biggest hackathon.
+  <br /><br />
+  According to Justin Trudeau, “Hack the North will give you a chance to not
+  only let your imagination run wild, but to meet other people who can help
+  you solve problems: mentors, friends and colleagues, who will challenge you
+  to take your ideas a step further.”
+
 </p>
 <div class="half second">
   <div id="hackathons">
