Add basic dot plot

--- a/academics/index.html
+++ b/academics/index.html
@@ -27,7 +27,7 @@ compensate for their lower grades in 3B.
 </p>
 <div class="half second">
   <div id="attendance"></div>
-  <span class="graph-title">Attendance per term. Max score is 5. </span>
+  <span class="graph-title">Attendance per term. Max score is 4. </span>
 </div>
 
 <div class="vbx4"></div>
@@ -87,6 +87,7 @@ beneficial. Instead, it suggests that it is possible to achieve good grades with
 attending all classes.
 </p>
 <div class="half second">
+  <div id="distribution"></div>
   Second half. Multi Line chart.
 </div>
 <div class="vbx2"></div>
