--- a/coop/index.html
+++ b/coop/index.html
@@ -100,6 +100,19 @@ results should be taken with a grain of salt because higher salary does not
 imply higher job satisfaction.
 </p>
 
+<div class="vbx2"></div>
+<h3> Grades </h3>
+<p class="half">
+  <span class="big">
+    Students who started coding earlier were paid similarly compared to students who
+    started coding later.
+  </span>
+</p>
+<div class="half second">
+  <div id="grade-salary"></div>
+  <span class="graph-title"> Grades compared to salary </span>
+</div>
+
 <div class="vbx4"></div>
 <h3> Years of coding experience </h3>
 <p class="half">
