--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -78,7 +78,7 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
       <div class="path-text">
         <div class="path-name">Soheil Koushan</div>
-        <div class="path-description">Incoming SWE at Embark Trucks</div>
+        <div class="path-description">Incoming Software Engineer at Embark Trucks</div>
       </div>
     </div>
   </div>
@@ -99,7 +99,7 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
       <div class="path-text">
         <div class="path-name">Kaivalya Gandhi</div>
-        <div class="path-description">Incoming APM at Yahoo!</div>
+        <div class="path-description">Incoming Associate Product Manager at Yahoo!</div>
       </div>
     </div>
   </div>
