--- a/academics/index.html
+++ b/academics/index.html
@@ -63,8 +63,8 @@ compensate for their lower grades in 3B.
   <br /><br />
   It's important to note that courses that were disliked do not imply that
   students find the content useless. Instead, there are a variety of factors
-  such as personal interests, final grade, assignments. For example, Logic and
-  Computation (SE 212) is considered as useful to 88% of students
+  such as personal interests, final grades, and assignments. For example, Logic and
+  Computation (SE 212) is considered useful by 88% of students
   <a href="https://uwflow.com/course/se212" target="_blank">
     according to UWFlow.</a>
 
@@ -82,7 +82,7 @@ compensate for their lower grades in 3B.
 <span class="big">
   There was no correlation between self-reported attendance and grades.
 </span>
-To be clear, this does not conclude nor suggest that not going to class is
+To be clear, this does not suggest that not going to class is
 beneficial. Instead, it suggests that it is possible to achieve good grades without
 attending all classes.
 </p>
