--- a/background/index.html
+++ b/background/index.html
@@ -57,13 +57,15 @@
 <h3> International students </h3>
 <p class="half">
   <span class="big">
-  14% of SE students are international, which is 4% less than University of
+  14% of SE students are international, which is 4% fewer than University of
   Waterloo's 18%.
   </span>
   This could be due to the higher tuition costs for international students, who
-  pay 27% more than the average internationa tuition fee.
+  pay 27% more than the average internationa tuition fee. This could also be
+  caused by the Engineering Admissions having a max quota for international
+  students.
   <br /> <br />
-  International students came from countries like Nigeria, United Arab Emirates,
+  International students came from countries including Nigeria, United Arab Emirates,
   China, Pakistan, South Korea, Indonesia.
 </p>
 <div class="half second">
@@ -78,7 +80,7 @@
 <p class="half">
   <span class="big">
     More than half of students come from families whose income is higher than
-    the median Canadian family income.
+    the median Canadian family income ($76,000).
   </span>
   The majority of students come from
 </p>
@@ -92,7 +94,7 @@
 <h3> Level of education </h3>
 <p class="half">
   <span class="big">
-  There are more parents with Masters and Doctorate's combined than Bachelors.
+  There are more parents with Masters and Doctorates combined than Bachelors.
   </span>
   Compared to our parents, only 3 students out of 113 are planning on attending
   grad school. This could
