--- a/coop/index.html
+++ b/coop/index.html
@@ -5,8 +5,8 @@
     At least 300 companies from 58 different cities have hired an SE student.
   </span>
   Students had the opportunity to work in many different types of environments,
-  ranging from working at a 5 person startup, developing in Kenya, doing
-  research with professors, working at a big tech company, etc. Some students also tried
+  including working at a 5 person startup, developing in Kenya, doing
+  research with professors, and working at a big tech company. Some students tried
   new positions outside of software engineering such
   as product designer, data scientist, associate quantitative trader,
   consultant, and more.
@@ -35,16 +35,16 @@ TODO: Create asset
   <span class="big">
     91% of students interned in at least 2 different countries.
   </span>
-  Out of the 9% of students that only interned in Canada, some are restricted
-  due to work visas.
+  One of the factors behind 9% of students only interning in Canada were
+  restrictions from work visas which primarily affects non-Canadians.
   <br /><br />
-  Most people that worked in the US worked in California, specifically
-  in Silicon Valley. One of the reasons for this is because Silicon Valley is the HQ for many
+  The majority that interned in the US worked in California and specifically in Silicon Valley.
+  One of the reasons for this is because Silicon Valley is the HQ for many
   large tech companies that hire software engineers such as Google, Facebook,
   Apple, etc.
   <br /><br />
   During 5 of the 6 co-op terms, there was at least one student working outside
-  of North America. Students worked in cities like Stockholm, Nairobi, Phnom
+  of North America. This included cities such as Stockholm, Nairobi, Phnom
   Penh, Shanghai, Tokyo, etc.
 </p>
 <div class="half second">
@@ -94,7 +94,7 @@ TODO: Create asset
 <h2> Does X affect job opportunities? </h2>
 <h3> Salary as a metric </h3>
 <p class="full">
-In order to rank jobs appropriately, salary is used as a subjective metric to
+In order to rank jobs appropriately, salary is used as a proxy metric to
 measure job quality. Due to the subjectiveness of this metric, the following
 results should be taken with a grain of salt because higher salary does not
 imply higher job satisfaction.
@@ -141,7 +141,7 @@ imply higher job satisfaction.
   because students that attended a hackathon cared more about getting a better
   job.
   <br /> <br />
-  Students that attended more than 5 hackathons earned approximately 27% more than
+  Students who attended more than 5 hackathons earned approximately 27% more than
   those that only attended between 1 to 5 hackathons. This could suggest that the
   former has a lot more relevant work to show which is more appealing to
   employers.
@@ -158,7 +158,7 @@ imply higher job satisfaction.
     Students that build side projects earn 13% more on average than those that
     don't build side projects.
   </span>
-  The more time student invests into side projects, the more they are likely
+  The more time that a student invests into side projects, the more they are likely
   to get paid. Side projects are often seen as the closest thing to software
   work experience, making it a great time investment to compensate for any lack
   of work experience.
@@ -169,9 +169,8 @@ imply higher job satisfaction.
   find job opportunities such as referrals, networking, etc.
   <br /> <br />
   It is just as important to note that <b>students who are not involved in software-related
-  extracurriculars still find great jobs</b>. In fact, pursuing interests outside
-  of software is encouraged, and is something many SE students encourage
-  amongst each other.
+  extracurriculars still find great jobs</b>. In fact,
+  many SE students and faculty encourage pursuing interests besides software.
 </p>
 <div class="half second">
   <div id="side-salary"></div>
