--- a/end/index.html
+++ b/end/index.html
@@ -21,9 +21,9 @@ managing the data and unbiasedly advising the project from start to finish.
 
 <div class="hvb"></div>
 <p class="full">
-<b>Christopher Luc</b> for setting up the processing architecture and advising the
-statistical methodologies applied, and <b>Richard Wong</b> for helping write
-some processing scripts.
+<b>Christopher Luc</b> for setting up the processing architecture and advising
+about the best statistical methodologies to apply, and <b>Richard Wong</b> for
+helping write processing scripts.
 </p>
 <div class="hvb"></div>
 
