--- a/future/index.html
+++ b/future/index.html
@@ -7,7 +7,7 @@
   </span>
   7 students are planning to do graduate studies after
   graduating. Although most of the class plans to join the workforce immediately,
-  34% of students are  considering to do grad school at some point in the future.
+  34% of students are considering grad school in the future.
   <br/><br/>
 
   Even though 80% of the class has worked in California, less than half of
