--- a/introduction/index.html
+++ b/introduction/index.html
@@ -2,7 +2,7 @@
 <p class="full">
   The University of Waterloo’s Software Engineering (SE) is an interdisciplinary
   program supported by both the Faculty of Mathematics and the Faculty of
-  Engineering. For 5 years, the 141 students of the class of 2018 spent 8
+  Engineering. For 5 years, all 141 graduating students of the class of 2018 spent 8
   semesters in school with similar schedules as well as 6 internships.
   <br /><br />
   SE is commonly compared to Computer Science, and is often seen as its more-constrained,
@@ -19,8 +19,8 @@
 <p class="full">
 The findings in this report were derived from the results of a class survey.
 In total, 113 out of 141 (80%) graduating students responded. SE Classes
-can vary significantly depending on the year, so generalizations from this
-class to other SE or CS classes are not recommended.
+can vary significantly depending on the year, so generalize from this survey
+to other classes at your own risk.
   <br /><br />
 
 Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). 4 month coop terms
@@ -31,6 +31,6 @@ All analysis involving income is expressed in Canadian dollars (CAD). The exchan
 rate used to convert from USD to CAD depends on time and is stated where relevant.
 
 <br /><br />
-This class profile was largely inspired from the SYDE 2017 class profile created
+This class profile was inspired from the SYDE 2017 class profile created
 by Joey Loi and Atef Chaudhury.
 </p>
