--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -84,7 +84,7 @@
   Python is the most popular programming language.
   </span>
   Python’s versatility for back-end web, scripting, and especially machine learning could explain
-  why it is so popular in our class. Many of these disciplines are high in demand
+  why it is so popular in our class. Many of these disciplines are highly in-demand
   in the software engineering, making Python an ideal general purpose language.
 
   <br /> <br />
@@ -136,8 +136,8 @@
   programmers
   <br /> <br />
   Interestingly, most students didn’t have a macOS machine in first year. Many
-  employers provided Macbooks as work laptops which introduced students to macOS's
-  development environment. As a result, many students converted to being Macbook
+  employers provided MacBooks as work laptops which introduced students to macOS's
+  development environment. As a result, many students converted to being MacBook
   users during university.
 </p>
 <div class="half second">
@@ -177,7 +177,7 @@
     Most students have also worked on some sort of side project during university.
   </span>
   Amongst those that have built side projects, only 25% dedicated more than 10
-  hours a month on their side projects. This should be taken with a grain of
+  hours a month to their side projects. This should be taken with a grain of
   salt since commitment may vary depending on the term and year.
   <br /><br />
   During the first few years of SE, side projects is often a means to getting
@@ -209,7 +209,7 @@
   <br/><br/>
 
   Only 3 students have expressed interest in mobile development. This is
-  surprising because of both how high in demand it is and how ubiquitous it is
+  surprising because of both how high in-demand it is and how ubiquitous it is
   amongst consumers.
 
 </p>
