--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -6,7 +6,7 @@
     70% of students would choose SE again if they could go back to high
     school.
   </span>
-  Computer Science is a popular alternative because it is less rigorous and has
+  Computer Science is a popular alternative because it has
   more course flexibility. Unlike SE, Computer Science does not have a cohort
   which makes it harder for CS students to meet others.
 </p>
@@ -24,7 +24,7 @@
     the class, and equally enjoyed by both men and women.
   </span>
   51% of the class rated SE a max rating score, and 87% of the class rated above
-  a 4 out of 5. Shoutouts to the Faculty of Software Engineering and the class
+  a 4 out of 5. Shoutouts to the Software Engineering faculty and the class
   for creating such a great environment for students!
 </p>
 <div class="half second">
